fix empty whitespace for narrow desktop

--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -98,6 +98,13 @@ body {
     position: relative;
 }
 
+@media (min-width: 710px) and (max-width: 1024px) {
+    nav.site-nav {
+        // Account for header height change.
+        margin-bottom: -38px;
+    }
+}
+
 .row {
     clear: both;
 }
